@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.garret.perst</groupId>
-    <artifactId>perst</artifactId>
+    <artifactId>perst-dcg</artifactId>
     <version>4.0.0</version>
     <packaging>jar</packaging>
 
@@ -36,6 +36,14 @@
         <spotbugs.plugin.version>4.9.6.0</spotbugs.plugin.version>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>nassyn-releases</id>
+            <name>Nassyn Maven Repository</name>
+            <url>scp://nassyn/volume1/mavenRepo</url>
+        </repository>
+    </distributionManagement>
+
     <repositories>
         <repository>
             <id>jacoco-snapshots</id>
@@ -64,11 +72,30 @@
             <version>${lucene.version}</version>
         </dependency>
         
+        <!-- Lucene QueryParser for query parsing -->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+        
         <!-- Javassist for bytecode manipulation -->
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>${javassist.version}</version>
+        </dependency>
+
+        <!-- SLF4J for logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.16</version>
         </dependency>
 
         <!-- Test Dependencies -->
@@ -108,30 +135,7 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>src</sourceDirectory>
-        <testSourceDirectory>tst</testSourceDirectory>
-        
         <plugins>
-            <!-- Add additional test source directory -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.4.0</version>
-                <executions>
-                    <execution>
-                        <id>add-test-source</id>
-                        <phase>generate-test-sources</phase>
-                        <goals>
-                            <goal>add-test-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${project.basedir}/junit_tests/src</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
 
             <!-- Compiler Plugin -->
             <plugin>
@@ -143,14 +147,14 @@
                     <target>${java.version}</target>
                     <release>${java.version}</release>
                     <compilerArgs>
+                        <arg>-Xlint:all</arg>
+                        <arg>-Xlint:-options</arg>
                         <arg>-Xlint:deprecation</arg>
                         <arg>-Xlint:unchecked</arg>
                         <arg>-Xlint:removal</arg>
                     </compilerArgs>
                     <excludes>
                         <exclude>org/garret/perst/jassist/**</exclude>
-                        <exclude>tst/OO7/**</exclude>
-                        <exclude>tst/TestVersion.java</exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -161,6 +165,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                    </argLine>
                     <includes>
                         <include>**/*Test*.java</include>
                         <include>**/Test*.java</include>
@@ -168,7 +177,6 @@
                     <excludes>
                         <exclude>**/jassist/**</exclude>
                         <exclude>**/android/**</exclude>
-                        <exclude>**/OO7/**</exclude>
                     </excludes>
                     <systemProperties>
                         <property>
@@ -274,7 +282,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-enforcer-plugin</artifactId>
-                        <version>3.5.0</version>
+                        <version>3.4.1</version>
                         <executions>
                             <execution>
                                 <id>enforce-java</id>
